# rescue-rover-sim

./: docker-compose.swarm.yml  docker-compose.yml
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.css
client/src/components/: ControlPanel.tsx  JointSlider.tsx  MiniMap.tsx  TelemetryDashboard.tsx
client/src/components/analytics/: MissionScrubber.tsx  TelemetryCharts.tsx
client/src/components/chaos_panel/: ChaosPanel.tsx
client/src/components/sandbox/: SandboxManager.tsx
client/src/components/swarm_dash/: FleetDashboard.tsx
client/src/context/: FleetContext.tsx  SimulationContext.tsx
client/src/math/: CollisionDetector.ts  DynamicsSolver.ts  KinematicsSolver.ts  Matrix4x4.ts  PathPlanner.ts  PidController.ts  SensorFusion.ts  SlamEngine.ts  TrajectoryPlanner.ts  Vector3D.ts
client/src/simulation/: SceneContainer.tsx
client/src/simulation/arm/: Link.tsx  PrismaticJoint.tsx  RevoluteJoint.tsx  RobotArm.tsx  SphericalJoint.tsx  WorkspaceVisualization.tsx
client/src/simulation/drone/: Quadcopter.tsx
client/src/simulation/environments/: DisasterZone.tsx  ExtractionTarget.tsx  GroundGrid.tsx  Rubbles.tsx
client/src/simulation/rover/: RoverBase.tsx  RoverWheel.tsx
ros2_ws/src/control_node/: CMakeLists.txt  package.xml
ros2_ws/src/control_node/src/: control_node.cpp
ros2_ws/src/drone_node/: package.xml  setup.py
ros2_ws/src/drone_node/drone_node/: __init__.py  drone_node.py
ros2_ws/src/fault_injection/: CMakeLists.txt  package.xml
ros2_ws/src/fault_injection/src/: noise_injector_node.cpp
ros2_ws/src/kinematics_node/: CMakeLists.txt  package.xml
ros2_ws/src/kinematics_node/src/: kinematics_node.cpp
ros2_ws/src/map_merger_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/map_merger_node/map_merger_node/: __init__.py  map_merger_node.py
ros2_ws/src/navigation_node/: CMakeLists.txt  package.xml
ros2_ws/src/navigation_node/src/: navigation_node.cpp
ros2_ws/src/perception_node/: package.xml  setup.py
ros2_ws/src/perception_node/perception_node/: __init__.py  perception_node.py
ros2_ws/src/swarm_manager/: package.xml  setup.py
ros2_ws/src/swarm_manager/swarm_manager/: __init__.py  collision_avoidance_node.py  pathfinder_node.py
server/: package.json
server/src/: server.js
server/src/models/: CalibrationSchema.js  MapSchema.js  Telemetry.js
server/src/routes/: calibration.js  maps.js  replay.js
server/src/sockets/: telemetryHandler.js
